# odilia-plugin-example

./: Cargo.toml  odilia-plugin-types.wai  odilia-test-plugin.wai
src/: lib.rs
